{
    "name": "ColorChangingCubeInputs",
    "maps": [
        {
            "name": "Cube",
            "id": "8f0a93bc-72ef-43b8-9ab5-a3dde2c2c1eb",
            "actions": [
                {
                    "name": "ChangeColor",
                    "type": "Button",
                    "id": "408bc3a1-73a5-43db-b642-3b02ac57dc09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateCube",
                    "type": "Button",
                    "id": "6a38b328-63fd-423b-bf44-cb2168d4ed52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "021b7c49-4658-4e90-860c-f39a5ad3f3e2",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeColor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "5952c93f-d6c5-4d2a-bd88-8e25733f33d2",
                    "path": "1DAxis",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCube",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "078f0bf7-d459-41b2-a260-b81424a2ec08",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCube",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "641033d9-8c24-4bb4-b64c-3b3ffbe1ae66",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCube",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "DrivableCube",
            "id": "a896b397-6cd4-486a-84a9-5a14c4732565",
            "actions": [
                {
                    "name": "Driving",
                    "type": "Value",
                    "id": "7bd1bd30-4518-46a8-a394-72dbf94483e8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "6f03d78f-4dff-479d-b64a-2467ed6cc760",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Driving",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "107b824b-403d-478b-9620-404ee2a2cd91",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Driving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0a067d09-272b-47ee-861e-19af882b8d9d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Driving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "307ea989-04b5-46a3-bee4-03824bbf79b3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Driving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0053d162-e1a7-424c-b1af-25a1c188a31a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Driving",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}